# EscapeRoom_TextGame

./: BuildProject.bat  BuildProjectCurrent.bat  CMakeLists.txt  Download.bat  Game.bat  README.md  Setup.bat  Testing.bat
Include/: Item.h  Room.h
src/: Item.cpp  Item.h  Room.cpp  Room.h  main.cpp
